# k4sme.ai4sdw.dash

./: Dockerfile  README.md  pyproject.toml  streamlit-app.py
dashboard/: main.py  ngsy.py
dazzler/: main.py  main_st.py  ngsy.py
dazzler/dash/: entitiesframe.py  entitymon.py  timeseries.py
tests/sim/: docker-compose.yml  runner.py
tests/util/: fiware.py
