[tool.poetry]
name = "dash"
version = "0.1.0"
description = "ai4sdw dashboard"
authors = ["berserkrambo"]

[tool.poetry.dependencies]
python = "3.9.12"
numpy = "1.23.2"
pyaml = "21.10.1"
opencv-python-headless = "4.5.4.60"
fastapi = "^0.73.0"
fipy = {git = "https://github.com/c0c0n3/kitt4sme.fipy.git", tag = "0.9.0"}
requests = "^2.27.1"
uri = "^2.0.1"
pydantic = "^1.9.0"
path = "16.4.0"
pandas = "1.5.2"
streamlit = "1.15.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[build-system]
requires = ["poetry-core>=1.0.0, <1.4.0"]
build-backend = "poetry.core.masonry.api"
